fixing text wrapping on Tutorial button when arrow keyed on main page`

--- a/css/main.css
+++ b/css/main.css
@@ -81,6 +81,7 @@ html, body {
     color: aqua;
     text-align: center;
     display: flex;
+    min-width: max-content;
     flex-direction: column;
     font-size: 3.2vw;
 }
